# bq-util

./: README.md  pyproject.toml
bq_util/: cli.py
bq_util/dbt_bq_util/: .gitignore  dbt_project.yml
bq_util/dbt_bq_util/macros/: list_tables.sql
bq_util/dbt_bq_util/profiles/: profiles.yml
tests/: test_bq_util.py
